--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 wasm-bindgen = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.33"
+planetr = "0.1.0"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
